# shellder

./: Cargo.toml  README.md
examples/: basic.rs  basic_macro.rs  car.rs  cli_runner.rs
src/: container.rs  errors.rs  lib.rs  logger.rs  resolve_error.rs
test/: examples.rs
